# multiplan

./: .gitignore  .goreleaser.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  go.mod  main.go  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci.yml
cmd/: eval.go  plan.go  root.go
eval/fixtures/: auth-system.json  cicd-pipeline.json  db-migration.json  rate-limiter.json  realtime-chat.json  webhook-system.json
homebrew/: multiplan.rb
internal/config/: config.go  config_test.go  loader.go  loader_test.go
internal/eval/: eval.go  judge.go  structural.go  structural_test.go  types.go
internal/models/: anthropic.go  anthropic_test.go  client.go  glm.go  google.go  openai.go  openai_test.go  provider.go  provider_test.go
internal/planner/: formatint_test.go  lattice_integration_test.go  lenses.go  lenses_test.go  planner.go  planner_test.go
py/: pyproject.toml
py/multiplan/: __init__.py  cli.py
scripts/: glm.py  multiplan.sh  release.sh  render.py
src/: cli.ts  planner.ts
src/eval/: index.ts  runner.ts  types.ts
src/eval/scorers/: actionable.ts  coverage.ts  llm-judge.ts  scorers.test.ts  specificity.ts
src/integrations/: claude-code.ts  openclaw.ts
src/models/: claude.ts  codex.ts  gemini.ts  glm.ts  index.ts  types.ts
src/prompts/: converge.md  debate.md  loader.ts  plan.md
