[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "multiplan"
version = "0.1.0"
description = "4-model parallel planning workflow — Claude, Gemini, Codex, GLM-5"
authors = [{ name = "CyperX", email = "cyperx84@gmail.com" }]
license = { text = "MIT" }
readme = "../README.md"
requires-python = ">=3.9"
keywords = ["ai", "planning", "llm", "claude", "gemini", "codex", "glm", "eval", "agent"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
  "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/cyperx84/multiplan"
Repository = "https://github.com/cyperx84/multiplan"
Issues = "https://github.com/cyperx84/multiplan/issues"

[project.scripts]
multiplan = "multiplan.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["multiplan"]
